# spectrojan

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
corpus/bio/: count_kmers.py  filter_reads_by_quality.py  find_orfs.py  gc_content.py  hamming_distance.py  is_safe_sequence.py  melting_temperature.py  parse_fasta.py  reverse_complement.py  transcribe.py  translate.py
corpus/generic/: balanced_parens.py  binary_search.py  gcd.py  kth_largest.py  merge_intervals.py
evals/runs/corpus_comparison/20260522-143220/: summary.csv
evals/runs/corpus_comparison/20260522-143220/per_function/: reverse_complement.json
evals/runs/corpus_comparison/20260522-143500/: summary.csv
evals/runs/sanity/: specs.json  twins.json
reports/: DEMO_VIDEO_SCRIPT.md  SpecTrojan_Report.md  SpecTrojan_Submission.docx  abstract.md  bio_honeypot_demo.md  metamorphic_results.md  strengthening_demo.md
scripts/: build_submission_docx.py  make_figures.py  run_bio_honeypot.py  run_corpus_comparison.py  run_metamorphic_sweep.py  run_strengthening_demo.py  sanity_end_to_end.py  validate_corpus.py
src/spectrojan/: __init__.py  bio_honeypot.py  cli.py  corpus_loader.py  distance.py  executor.py  llm.py  metamorphic.py  report.py  spec_generator.py  strengthening.py  twin_synthesizer.py  types.py
src/spectrojan/baselines/: __init__.py  disagreement.py  mutator.py
tests/: test_disagreement.py  test_distance.py  test_executor.py  test_metamorphic.py  test_mutator.py  test_smoke.py  test_spec_generator.py  test_strengthening.py
(+16 files in other folders)
