[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrojan"
version = "0.1.0"
description = "Adversarial spec validation via Evil Twin Synthesis — find the implementation that haunts your specification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.100",
    "openai>=1.40",
    "google-genai>=0.3",
    "groq>=0.11",
    "libcst>=1.1",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "jinja2>=3.1",
]

[project.scripts]
spectrojan = "spectrojan.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
